--- a/shell_script/iris_sim.yml
+++ b/shell_script/iris_sim.yml
@@ -15,7 +15,7 @@ windows:
       layout: tiled
       panes:
         - sleep 7; rqt_image_view
-        # - sleep 7; rosrun iris_followup udp_image.py
+        - sleep 7; rosrun iris_followup udp_image.py
         - sleep 8; rosrun iris_followup aruco_node.py
   - manager:
       layout: tiled
