--- a/shell_script/iris_sim.yml
+++ b/shell_script/iris_sim.yml
@@ -17,7 +17,7 @@ windows:
         - sleep 7; rqt_image_view
         # - sleep 7; rosrun iris_followup udp_image.py
         - sleep 8; rosrun iris_followup aruco_node.py
-        - sleep 8; roslaunch iris_followup ar_track.launch
+        # - sleep 8; roslaunch iris_followup ar_track.launch
         
   - manager:
       layout: tiled
