--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,15 @@ shell_script/.tmuxinator.yml
 *.xml
 *.iml
 iris_followup/cmake-build-debug
+log/cascade-03.bag
+log/cascade-04.bag
+log/cascade-05.bag
+log/cascade.zip
+log/paralel-03.bag
+log/paralel-04.bag
+log/paralel-05.bag
+log/paralel.zip
+log/pd-03.bag
+log/pd-04.bag
+log/pd-05.bag
+log/pd.zip
