--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,12 @@ iris_followup/cmake-build-debug
 log/pd-03.bag
 log/pd-04.bag
 log/pd-05.bag
+log/cascade-03.bag
+log/cascade-04.bag
+log/cascade-05.bag
+log/cascade.zip
+log/paralel-03.bag
+log/paralel-04.bag
+log/paralel-05.bag
+log/paralel.zip
+log/pd.zip
